--- a/index.html
+++ b/index.html
@@ -354,11 +354,11 @@
             "images/netastral/Netastral_01.jpg",
             "images/netastral/Netastral_02.jpg",
           ],
-          dateAjout: "2020-01-14",
+          dateAjout: "2021-01-14",
         },
         {
           id: "t2",
-          titre: "Murmure d'Ombre",
+          titre: "Sanmourai",
           taille: "90 x 90 cm",
           description:
             "Le silence capturé dans le mouvement. Contrastes de textures entre le mat de l'acrylique et le brillant de l'huile.",
@@ -366,7 +366,7 @@
             "https://images.unsplash.com/photo-1554188248-986adbb73be4?auto=format&fit=crop&q=80&w=1200",
             "https://images.unsplash.com/photo-1561214115-f2f134cc4912?auto=format&fit=crop&q=80&w=1200",
           ],
-          dateAjout: "2024-04-15",
+          dateAjout: "2020-12-18",
         },
         {
           id: "t3",
