--- a/index.html
+++ b/index.html
@@ -358,13 +358,12 @@
         },
         {
           id: "t2",
-          titre: "Sanmourai",
-          taille: "90 x 90 cm",
-          description:
-            "Le silence capturé dans le mouvement. Contrastes de textures entre le mat de l'acrylique et le brillant de l'huile.",
+          titre: "Sanmouraï",
+          taille: "46 x 38 cm",
+          description: "",
           images: [
-            "https://images.unsplash.com/photo-1554188248-986adbb73be4?auto=format&fit=crop&q=80&w=1200",
-            "https://images.unsplash.com/photo-1561214115-f2f134cc4912?auto=format&fit=crop&q=80&w=1200",
+            "images/netastral/2020_Sanmourai_2.jpg",
+            "images/netastral/2020_Sanmourai_uni.jpg",
           ],
           dateAjout: "2020-12-18",
         },
