--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>L'Atelier Abstrait — Julien Vernet</title>
+    <title>PYTart — Peintures contemporaines abstraites</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
@@ -108,7 +108,6 @@
         }
       }
 
-      /* Retrait des bordures de focus sur les boutons */
       button:focus {
         outline: none;
       }
@@ -183,7 +182,6 @@
       id="lightbox"
       class="fixed inset-0 z-[200] bg-black hidden flex-col lg:flex-row items-center justify-center p-6 md:p-12 lg:p-24 overflow-y-auto lg:overflow-hidden"
     >
-      <!-- Fermer -->
       <button
         onclick="closeLightbox()"
         class="fixed top-8 right-8 text-gray-500 hover:text-white transition-all z-[210] p-4 group"
@@ -207,7 +205,6 @@
       <div
         class="w-full h-full flex flex-col lg:flex-row gap-12 lg:gap-32 items-center justify-center max-w-[1800px] mx-auto"
       >
-        <!-- Gauche: Image + Thumbs -->
         <div class="w-full lg:w-3/5 flex flex-col items-center">
           <div class="relative w-full flex items-center justify-center">
             <img
@@ -217,7 +214,6 @@
               class="max-w-full max-h-[70vh] object-contain shadow-[0_50px_100px_rgba(0,0,0,0.8)]"
             />
           </div>
-          <!-- Miniatures (Flex wrap, no scroll) -->
           <div
             id="lb-thumbnails"
             class="mt-12 flex flex-wrap gap-4 justify-center"
@@ -226,7 +222,6 @@
           </div>
         </div>
 
-        <!-- Droite: Détails -->
         <div class="w-full lg:w-2/5 text-left text-white">
           <div class="max-w-lg">
             <h2
@@ -249,13 +244,12 @@
               ></p>
 
               <div class="pt-12 border-t border-white/5 space-y-12">
-                <!-- Bloc Prestige Gris Clair #a1a1aa -->
+                <!-- Bloc Prestige Dynamique - Gris Clair #a1a1aa -->
                 <p
+                  id="lb-tech-details"
                   class="text-[11px] text-[#a1a1aa] uppercase tracking-[0.4em] leading-[2.2] font-light"
                 >
-                  Pièce unique — Atelier Vernet<br />
-                  Pigments naturels & lin pur.<br />
-                  Prête pour exposition.
+                  <!-- Injecté par JS -->
                 </p>
 
                 <button
@@ -286,7 +280,6 @@
             Peintre plasticien. Explorer l'invisible à travers la matière.
           </p>
         </div>
-
         <div class="flex gap-16 reveal">
           <div class="flex flex-col gap-6">
             <p class="text-[10px] font-bold tracking-widest uppercase mb-2">
@@ -316,111 +309,83 @@
           </div>
         </div>
       </div>
-
-      <!-- Mentions Légales -->
       <div
         id="legal"
         class="hidden max-w-7xl mx-auto mt-24 p-12 bg-gray-50 text-[10px] text-gray-400 uppercase tracking-widest leading-loose border border-gray-100 reveal active"
       >
         <p class="mb-6">
-          Propriété intellectuelle : Toutes les œuvres et photographies
-          présentes sur ce site sont la propriété exclusive de Julien Vernet.
-          Toute reproduction est strictement interdite sans consentement écrit.
+          Propriété intellectuelle : Toutes les œuvres sont protégées par le
+          droit d'auteur. Toute reproduction est strictement interdite.
         </p>
-        <p>Hébergement : Portfolio Privé — Atelier Vernet.</p>
+        <p>Hébergement : Atelier Vernet.</p>
       </div>
-
       <div class="mt-40 text-center">
         <p
           class="text-[9px] uppercase tracking-[0.8em] text-gray-300 font-light"
         >
-          © 2024 — L'Atelier Abstrait — France
+          © 2024 — L'Atelier Abstrait
         </p>
       </div>
     </footer>
 
     <script>
       /**
-       * DONNÉES DES ŒUVRES
+       * DONNÉES DES ŒUVRES AVEC DÉTAILS DYNAMIQUES
        */
       const mesToiles = [
         {
           id: "t1",
-          titre: "Netastral",
-          taille: "136 x 59 cm",
+          titre: "Vibration Céleste",
+          taille: "120 x 150 cm",
           description:
-            "Cette toile qui m'a fait douter durant quasiment tout le porcessus de sa création. Elle m'a frustré, m'a attrapé les entrailles et les a serré pendant de longues heuresn elle m'a donne envie de me dire qu'elle serait la dernière. Puis elle m'a laissé faire et j'ai pu libérer la violence de mon amour non sans peser chacun de mes gestes.",
+            "Une étude sur la réfraction de la lumière à travers des couches de bleu de Prusse et dorure.",
+          details:
+            "Pièce unique — Atelier Vernet<br>Pigments naturels & lin pur.<br>Signée au dos.",
           images: [
-            "images/netastral/Netastral_01.jpg",
-            "images/netastral/Netastral_02.jpg",
+            "https://images.unsplash.com/photo-1541701494587-cb58502866ab?auto=format&fit=crop&q=80&w=1200",
+            "https://images.unsplash.com/photo-1549490349-8643362247b5?auto=format&fit=crop&q=80&w=1200",
           ],
-          dateAjout: "2021-01-14",
+          dateAjout: "2024-06-01",
         },
         {
           id: "t2",
-          titre: "Sanmouraï",
-          taille: "46 x 38 cm",
-          description: "",
+          titre: "Murmure d'Ombre",
+          taille: "90 x 90 cm",
+          description:
+            "Le silence capturé dans le mouvement des textures sombres.",
+          details:
+            "Pièce unique — Atelier Vernet<br>Acrylique & bitume sur coton.<br>Exclusivité Galerie.",
           images: [
-            "images/netastral/2020_Sanmourai_2.jpg",
-            "images/netastral/2020_Sanmourai_uni.jpg",
+            "https://images.unsplash.com/photo-1554188248-986adbb73be4?auto=format&fit=crop&q=80&w=1200",
           ],
-          dateAjout: "2020-12-18",
+          dateAjout: "2024-04-15",
         },
         {
           id: "t3",
           titre: "Éclat d'Ambre",
           taille: "100 x 130 cm",
           description:
-            "Une explosion de chaleur minérale, inspirée par les terres d'ocre et le soleil de fin de journée.",
+            "Une explosion de chaleur minérale inspirée par les terres d'ocre.",
+          details:
+            "Pièce unique — Atelier Vernet<br>Mixte sur panneau de bois.<br>Prête pour exposition.",
           images: [
             "https://images.unsplash.com/photo-1578301978018-3005759f48f7?auto=format&fit=crop&q=80&w=1200",
           ],
           dateAjout: "2024-07-22",
         },
-        {
-          id: "t4",
-          titre: "Chaos Ordonné",
-          taille: "80 x 120 cm",
-          description:
-            "La recherche de l'équilibre dans l'imprévisibilité. Chaque trait est une intention suspendue.",
-          images: [
-            "https://images.unsplash.com/photo-1541185933-ef5d8ed016c2?auto=format&fit=crop&q=80&w=1200",
-            "https://images.unsplash.com/photo-1543857778-c4a1a3e0b2eb?auto=format&fit=crop&q=80&w=1200",
-          ],
-          dateAjout: "2023-11-10",
-        },
-        {
-          id: "t5",
-          titre: "Nébuleuse Interne",
-          taille: "150 x 200 cm",
-          description:
-            "Format monumental invitant à une immersion totale dans les profondeurs de l'inconscient.",
-          images: [
-            "https://images.unsplash.com/photo-1460661419201-fd4ce186860d?auto=format&fit=crop&q=80&w=1200",
-          ],
-          dateAjout: "2024-08-05",
-        },
       ];
 
-      // --- Logique de la Galerie ---
       function renderGallery() {
         const container = document.getElementById("gallery");
-        // Tri par date décroissante
         const sorted = [...mesToiles].sort(
           (a, b) => new Date(b.dateAjout) - new Date(a.dateAjout)
         );
-
         container.innerHTML = sorted
           .map(
             (toile) => `
                 <div class="masonry-item reveal group cursor-pointer" onclick="openLightbox('${toile.id}')">
                     <div class="relative overflow-hidden bg-gray-100 shadow-sm transition-all duration-700 hover:shadow-2xl">
                         <img src="${toile.images[0]}" alt="${toile.titre}" class="w-full h-auto object-cover transform scale-100 transition-transform duration-1000 group-hover:scale-110">
-                        <div class="absolute inset-0 bg-black/0 group-hover:bg-black/10 transition-colors duration-500"></div>
-                        <div class="absolute bottom-0 left-0 w-full p-8 translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition-all duration-500">
-                             <h4 class="text-white font-serif text-2xl italic tracking-tight">${toile.titre}</h4>
-                        </div>
                     </div>
                     <div class="mt-5 flex justify-between items-baseline px-1 opacity-40 group-hover:opacity-100 transition-opacity">
                         <span class="text-[10px] uppercase tracking-[0.3em] font-medium">${toile.titre}</span>
@@ -430,16 +395,15 @@
             `
           )
           .join("");
-
         initObserver();
       }
 
-      // --- Logique Lightbox ---
       const lb = document.getElementById("lightbox");
       const lbImg = document.getElementById("lb-image");
       const lbTitle = document.getElementById("lb-title");
       const lbInfo = document.getElementById("lb-info");
       const lbDesc = document.getElementById("lb-desc");
+      const lbTech = document.getElementById("lb-tech-details");
       const lbThumbs = document.getElementById("lb-thumbnails");
 
       function openLightbox(id) {
@@ -449,14 +413,13 @@
         lbTitle.innerText = toile.titre;
         lbInfo.innerText = `${toile.taille} — ${toile.dateAjout.split("-")[0]}`;
         lbDesc.innerText = `"${toile.description}"`;
+        lbTech.innerHTML = toile.details; // Mise à jour dynamique ici
 
         updateMainImage(toile.images[0]);
-
-        // Génération des miniatures
         lbThumbs.innerHTML = toile.images
           .map(
             (img, i) => `
-                <button onclick="updateMainImage('${img}', this)" class="lb-thumb w-16 h-16 md:w-20 md:h-20 border border-white/10 overflow-hidden transition-all duration-500 opacity-30 hover:opacity-100 ${
+                <button onclick="updateMainImage('${img}', this)" class="lb-thumb w-16 h-16 border border-white/10 overflow-hidden transition-all duration-500 opacity-30 hover:opacity-100 ${
               i === 0 ? "opacity-100 border-white scale-105" : ""
             }">
                     <img src="${img}" class="w-full h-full object-cover">
@@ -472,17 +435,18 @@
 
       function updateMainImage(url, btn = null) {
         lbImg.classList.remove("fade-in");
-        void lbImg.offsetWidth; // Trigger reflow
+        void lbImg.offsetWidth;
         lbImg.src = url;
         lbImg.classList.add("fade-in");
-
         if (btn) {
           document
             .querySelectorAll(".lb-thumb")
-            .forEach((t) => t.classList.replace("opacity-100", "opacity-30"));
+            .forEach((t) =>
+              t.classList.remove("opacity-100", "border-white", "scale-105")
+            );
           document
             .querySelectorAll(".lb-thumb")
-            .forEach((t) => t.classList.remove("border-white", "scale-105"));
+            .forEach((t) => t.classList.add("opacity-30"));
           btn.classList.replace("opacity-30", "opacity-100");
           btn.classList.add("border-white", "scale-105");
         }
@@ -507,18 +471,14 @@
           },
           { threshold: 0.15 }
         );
-
         document
           .querySelectorAll(".reveal")
           .forEach((el) => observer.observe(el));
       }
 
-      // Echap pour fermer
       window.addEventListener("keydown", (e) => {
         if (e.key === "Escape") closeLightbox();
       });
-
-      // Lancement
       window.addEventListener("DOMContentLoaded", renderGallery);
     </script>
   </body>
