--- a/index.html
+++ b/index.html
@@ -335,17 +335,16 @@
       const mesToiles = [
         {
           id: "t1",
-          titre: "Vibration Céleste",
-          taille: "120 x 150 cm",
+          titre: "Netastral",
+          taille: "136 x 59 cm",
           description:
-            "Une étude sur la réfraction de la lumière à travers des couches de bleu de Prusse et dorure.",
-          details:
-            "Pièce unique — Atelier Vernet<br>Pigments naturels & lin pur.<br>Signée au dos.",
+            "Cette toile qui m'a fait douter durant quasiment tout le processus de sa création. Elle m'a laissé frustré, m'a attrapé les entrailles et les a serré pendant de longues heures, elle m'a donné envie de me dire qu'elle serait la dernière. Puis elle m'a laissé faire et j'ai pu libéré la violence de mon amour non sans peser chacun de mes gestes.",
+          details: "Pièce unique <br>Acrylique et Coton.<br>Signée PYT.",
           images: [
-            "https://images.unsplash.com/photo-1541701494587-cb58502866ab?auto=format&fit=crop&q=80&w=1200",
-            "https://images.unsplash.com/photo-1549490349-8643362247b5?auto=format&fit=crop&q=80&w=1200",
+            "images/netastral/Netastral_01.jpg",
+            "images/netastral/Netastral_02.jpg",
           ],
-          dateAjout: "2024-06-01",
+          dateAjout: "2021-01-14",
         },
         {
           id: "t2",
