--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
           <h2
             class="font-luxury text-[11px] tracking-[0.6em] uppercase text-gray-400 mb-6"
           >
-            Collections 2024
+            Ma collection
           </h2>
           <h3
             class="font-serif text-4xl md:text-6xl text-gray-900 tracking-tight"
           >
-            Vibrations Chromatiques
+            Mon univers
           </h3>
         </header>
 
