--- a/index.html
+++ b/index.html
@@ -272,12 +272,12 @@
       >
         <div class="reveal">
           <h4 class="font-luxury text-sm tracking-[0.4em] mb-8">
-            JULIEN VERNET
+            Pierre-Yves TIBERGHIEN
           </h4>
           <p
             class="text-[10px] text-gray-400 uppercase tracking-[0.3em] max-w-xs leading-loose"
           >
-            Peintre plasticien. Explorer l'invisible à travers la matière.
+            Peintre amateur perdu dans ses couleurs
           </p>
         </div>
         <div class="flex gap-16 reveal">
@@ -323,7 +323,7 @@
         <p
           class="text-[9px] uppercase tracking-[0.8em] text-gray-300 font-light"
         >
-          © 2024 — L'Atelier Abstrait
+          © 2025 — PYTart
         </p>
       </div>
     </footer>
