--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           taille: "136 x 59 cm",
           description:
             "Cette toile qui m'a fait douter durant quasiment tout le processus de sa création. Elle m'a laissé frustré, m'a attrapé les entrailles et les a serré pendant de longues heures, elle m'a donné envie de me dire qu'elle serait la dernière. Puis elle m'a laissé faire et j'ai pu libéré la violence de mon amour non sans peser chacun de mes gestes.",
-          details: "Pièce unique <br>Acrylique et Coton.<br>Signée PYT.",
+          details: "Pièce unique <br>Acrylique et Coton.<br>PYT.",
           images: [
             "images/netastral/Netastral_01.jpg",
             "images/netastral/Netastral_02.jpg",
