--- a/index.html
+++ b/index.html
@@ -271,9 +271,7 @@
         class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-start gap-24"
       >
         <div class="reveal">
-          <h4 class="font-luxury text-sm tracking-[0.4em] mb-8">
-            Pierre-Yves TIBERGHIEN
-          </h4>
+          <h4 class="font-luxury text-sm tracking-[0.4em] mb-8">Pierre-Yves</h4>
           <p
             class="text-[10px] text-gray-400 uppercase tracking-[0.3em] max-w-xs leading-loose"
           >
