--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>L'Atelier Abstrait — Julien Vernet</title>
+    <title>PYT ART — L'Atelier Abstrait</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
@@ -33,7 +33,7 @@
         font-family: "Cinzel", serif;
       }
 
-      /* Effet Ken Burns (Zoom lent et fluide) */
+      /* Effet Ken Burns */
       .hero-bg {
         animation: kenburns 40s infinite alternate ease-in-out;
         transform-origin: center;
@@ -49,7 +49,7 @@
         }
       }
 
-      /* Galerie Masonry Organique */
+      /* Galerie Masonry */
       .masonry-grid {
         columns: 1;
         column-gap: 2rem;
@@ -70,7 +70,7 @@
         margin-bottom: 2rem;
       }
 
-      /* Animations d'apparition au scroll */
+      /* Animations au scroll */
       .reveal {
         opacity: 0;
         transform: translateY(30px);
@@ -81,7 +81,6 @@
         transform: translateY(0);
       }
 
-      /* Personnalisation Scrollbar */
       ::-webkit-scrollbar {
         width: 4px;
       }
@@ -93,7 +92,6 @@
         border-radius: 4px;
       }
 
-      /* Animation de fondu pour le changement d'image dans la lightbox */
       .fade-in {
         animation: fadeIn 0.6s cubic-bezier(0.2, 0, 0.2, 1);
       }
@@ -108,7 +106,6 @@
         }
       }
 
-      /* Retrait des bordures de focus sur les boutons */
       button:focus {
         outline: none;
       }
@@ -130,7 +127,7 @@
       <div class="absolute inset-0 z-0">
         <img
           src="https://images.unsplash.com/photo-1541701494587-cb58502866ab?auto=format&fit=crop&q=80&w=2400"
-          alt="Peinture Abstraite"
+          alt="PYT ART Background"
           class="w-full h-full object-cover hero-bg brightness-[0.7]"
         />
         <div class="absolute inset-0 bg-black/10"></div>
@@ -173,17 +170,17 @@
         </header>
 
         <div id="gallery" class="masonry-grid">
-          <!-- Généré par JavaScript -->
+          <!-- Généré par JS -->
         </div>
       </div>
     </section>
 
-    <!-- Lightbox Modal -->
+    <!-- Lightbox Modal - FIXED SCROLL FOR MOBILE -->
     <div
       id="lightbox"
-      class="fixed inset-0 z-[200] bg-black hidden flex-col lg:flex-row items-center justify-center p-6 md:p-12 lg:p-24 overflow-y-auto lg:overflow-hidden"
+      class="fixed inset-0 z-[200] bg-black hidden overflow-y-auto"
     >
-      <!-- Fermer -->
+      <!-- Croix de fermeture (Toujours visible en haut à droite) -->
       <button
         onclick="closeLightbox()"
         class="fixed top-8 right-8 text-gray-500 hover:text-white transition-all z-[210] p-4 group"
@@ -205,29 +202,28 @@
       </button>
 
       <div
-        class="w-full h-full flex flex-col lg:flex-row gap-12 lg:gap-32 items-center justify-center max-w-[1800px] mx-auto"
+        class="min-h-screen w-full flex flex-col lg:flex-row items-center justify-center p-8 md:p-16 lg:p-24 gap-12 lg:gap-32 max-w-[1800px] mx-auto"
       >
-        <!-- Gauche: Image + Thumbs -->
+        <!-- Contenu Visuel -->
         <div class="w-full lg:w-3/5 flex flex-col items-center">
           <div class="relative w-full flex items-center justify-center">
             <img
               id="lb-image"
               src=""
               alt=""
-              class="max-w-full max-h-[70vh] object-contain shadow-[0_50px_100px_rgba(0,0,0,0.8)]"
+              class="max-w-full max-h-[60vh] lg:max-h-[75vh] object-contain shadow-[0_50px_100px_rgba(0,0,0,0.8)]"
             />
           </div>
-          <!-- Miniatures (Flex wrap, no scroll) -->
           <div
             id="lb-thumbnails"
             class="mt-12 flex flex-wrap gap-4 justify-center"
           >
-            <!-- Généré par JS -->
+            <!-- Miniatures générées -->
           </div>
         </div>
 
-        <!-- Droite: Détails -->
-        <div class="w-full lg:w-2/5 text-left text-white">
+        <!-- Contenu Texte -->
+        <div class="w-full lg:w-2/5 text-left text-white pb-12 lg:pb-0">
           <div class="max-w-lg">
             <h2
               id="lb-title"
@@ -249,21 +245,22 @@
               ></p>
 
               <div class="pt-12 border-t border-white/5 space-y-12">
-                <!-- Bloc Prestige Gris Clair #a1a1aa -->
+                <!-- Bloc Technique - Couleur #a1a1aa -->
                 <p
+                  id="lb-tech-details"
                   class="text-[11px] text-[#a1a1aa] uppercase tracking-[0.4em] leading-[2.2] font-light"
                 >
-                  Pièce unique — Atelier Vernet<br />
-                  Pigments naturels & lin pur.<br />
-                  Prête pour exposition.
+                  <!-- Injecté par JS -->
                 </p>
 
-                <button
-                  onclick="closeLightbox()"
-                  class="px-12 py-4 border border-white/10 text-white text-[10px] uppercase tracking-[0.5em] hover:bg-white hover:text-black transition-all duration-500"
-                >
-                  Fermer
-                </button>
+                <div class="flex flex-wrap gap-6 pt-4">
+                  <button
+                    onclick="closeLightbox()"
+                    class="px-12 py-4 border border-white/10 text-white text-[10px] uppercase tracking-[0.5em] hover:bg-white hover:text-black transition-all duration-500"
+                  >
+                    Retour à la galerie
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -277,13 +274,12 @@
         class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-start gap-24"
       >
         <div class="reveal">
-          <h4 class="font-luxury text-sm tracking-[0.4em] mb-8">
-            JULIEN VERNET
-          </h4>
+          <h4 class="font-luxury text-sm tracking-[0.4em] mb-8">PYT ART</h4>
           <p
             class="text-[10px] text-gray-400 uppercase tracking-[0.3em] max-w-xs leading-loose"
           >
-            Peintre plasticien. Explorer l'invisible à travers la matière.
+            Atelier d'art abstrait. Explorer l'invisible à travers la matière et
+            le mouvement.
           </p>
         </div>
 
@@ -317,42 +313,39 @@
         </div>
       </div>
 
-      <!-- Mentions Légales -->
       <div
         id="legal"
         class="hidden max-w-7xl mx-auto mt-24 p-12 bg-gray-50 text-[10px] text-gray-400 uppercase tracking-widest leading-loose border border-gray-100 reveal active"
       >
         <p class="mb-6">
-          Propriété intellectuelle : Toutes les œuvres et photographies
-          présentes sur ce site sont la propriété exclusive de Julien Vernet.
-          Toute reproduction est strictement interdite sans consentement écrit.
+          Propriété intellectuelle : Toutes les œuvres sont la propriété
+          exclusive de PYT ART. Toute reproduction est strictement interdite.
         </p>
-        <p>Hébergement : Portfolio Privé — Atelier Vernet.</p>
+        <p>Hébergement : Atelier Privé — PYT ART.</p>
       </div>
 
       <div class="mt-40 text-center">
         <p
           class="text-[9px] uppercase tracking-[0.8em] text-gray-300 font-light"
         >
-          © 2024 — L'Atelier Abstrait — France
+          © 2024 — PYT ART — France
         </p>
       </div>
     </footer>
 
     <script>
-      /**
-       * DONNÉES DES ŒUVRES
-       */
-      // === DEBUT DES DONNEES (NE PAS MODIFIER) ===
+      // === DEBUT DES DONNEES ===
       const mesToiles = [
         {
           id: "t1",
           titre: "Netastral",
           taille: "136 x 59 cm",
+          details:
+            "PIÈCE UNIQUE — SIGNATURE PYT.<br>ACRYLIQUE SUR TOILE DE LIN.<br>CHÂSSIS HAUTE QUALITÉ.",
           description:
-            "Cette toile qui m'a fait douter durant quasiment tout le porcessus de sa création. Elle m'a frustré, m'a attrapé les entrailles et les a serré pendant de longues heuresn elle m'a donne envie de me dire qu'elle serait la dernière. Puis elle m'a laissé faire et j'ai pu libérer la violence de mon amour non sans peser chacun de mes gestes.",
+            "Cette toile qui m'a fait douter durant quasiment tout le processus de sa création. Elle m'a frustré, m'a attrapé les entrailles et les a serré pendant de longues heures, elle m'a donné envie de me dire qu'elle serait la dernière. Puis elle m'a laissé faire et j'ai pu libérer la violence de mon amour non sans peser chacun de mes gestes.",
           images: [
-            "images/netastral/Netastral_01.jpg",
+            "/images/netastral/Netastral_01.jpg",
             "images/netastral/Netastral_02.jpg",
           ],
           dateAjout: "2020-01-14",
@@ -361,6 +354,8 @@
           id: "t2",
           titre: "Murmure d'Ombre",
           taille: "90 x 90 cm",
+          details:
+            "PIÈCE UNIQUE — PYT ART.<br>ACRYLIQUE & BITUME SUR COTON.<br>EXCLUSIVITÉ GALERIE.",
           description:
             "Le silence capturé dans le mouvement. Contrastes de textures entre le mat de l'acrylique et le brillant de l'huile.",
           images: [
@@ -373,6 +368,8 @@
           id: "t3",
           titre: "Éclat d'Ambre",
           taille: "100 x 130 cm",
+          details:
+            "PIÈCE UNIQUE — PYT ART.<br>PIGMENTS NATURELS & LIN PUR.<br>PRÊTE POUR EXPOSITION.",
           description:
             "Une explosion de chaleur minérale, inspirée par les terres d'ocre et le soleil de fin de journée.",
           images: [
@@ -384,6 +381,8 @@
           id: "t4",
           titre: "Chaos Ordonné",
           taille: "80 x 120 cm",
+          details:
+            "PIÈCE UNIQUE — PYT ART.<br>TECHNIQUE MIXTE SUR LIN.<br>SIGNÉ AU DOS.",
           description:
             "La recherche de l'équilibre dans l'imprévisibilité. Chaque trait est une intention suspendue.",
           images: [
@@ -396,6 +395,8 @@
           id: "t5",
           titre: "Nébuleuse Interne",
           taille: "150 x 200 cm",
+          details:
+            "PIÈCE UNIQUE — PYT ART.<br>HUILE ET ACRYLIQUE.<br>FORMAT MONUMENTAL.",
           description:
             "Format monumental invitant à une immersion totale dans les profondeurs de l'inconscient.",
           images: [
@@ -405,10 +406,9 @@
         },
       ];
       // === FIN DES DONNEES ===
-      // --- Logique de la Galerie ---
+
       function renderGallery() {
         const container = document.getElementById("gallery");
-        // Tri par date décroissante
         const sorted = [...mesToiles].sort(
           (a, b) => new Date(b.dateAjout) - new Date(a.dateAjout)
         );
@@ -416,32 +416,31 @@
         container.innerHTML = sorted
           .map(
             (toile) => `
-                <div class="masonry-item reveal group cursor-pointer" onclick="openLightbox('${toile.id}')">
-                    <div class="relative overflow-hidden bg-gray-100 shadow-sm transition-all duration-700 hover:shadow-2xl">
-                        <img src="${toile.images[0]}" alt="${toile.titre}" class="w-full h-auto object-cover transform scale-100 transition-transform duration-1000 group-hover:scale-110">
-                        <div class="absolute inset-0 bg-black/0 group-hover:bg-black/10 transition-colors duration-500"></div>
-                        <div class="absolute bottom-0 left-0 w-full p-8 translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition-all duration-500">
-                             <h4 class="text-white font-serif text-2xl italic tracking-tight">${toile.titre}</h4>
-                        </div>
-                    </div>
-                    <div class="mt-5 flex justify-between items-baseline px-1 opacity-40 group-hover:opacity-100 transition-opacity">
-                        <span class="text-[10px] uppercase tracking-[0.3em] font-medium">${toile.titre}</span>
-                        <span class="text-[9px] uppercase tracking-widest font-light">${toile.taille}</span>
-                    </div>
-                </div>
-            `
+          <div class="masonry-item reveal group cursor-pointer" onclick="openLightbox('${toile.id}')">
+            <div class="relative overflow-hidden bg-gray-100 shadow-sm transition-all duration-700 hover:shadow-2xl">
+              <img src="${toile.images[0]}" alt="${toile.titre}" class="w-full h-auto object-cover transform scale-100 transition-transform duration-1000 group-hover:scale-110">
+              <div class="absolute inset-0 bg-black/0 group-hover:bg-black/10 transition-colors duration-500"></div>
+              <div class="absolute bottom-0 left-0 w-full p-8 translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition-all duration-500">
+                <h4 class="text-white font-serif text-2xl italic tracking-tight">${toile.titre}</h4>
+              </div>
+            </div>
+            <div class="mt-5 flex justify-between items-baseline px-1 opacity-40 group-hover:opacity-100 transition-opacity">
+              <span class="text-[10px] uppercase tracking-[0.3em] font-medium">${toile.titre}</span>
+              <span class="text-[9px] uppercase tracking-widest font-light">${toile.taille}</span>
+            </div>
+          </div>
+        `
           )
           .join("");
-
         initObserver();
       }
 
-      // --- Logique Lightbox ---
       const lb = document.getElementById("lightbox");
       const lbImg = document.getElementById("lb-image");
       const lbTitle = document.getElementById("lb-title");
       const lbInfo = document.getElementById("lb-info");
       const lbDesc = document.getElementById("lb-desc");
+      const lbTech = document.getElementById("lb-tech-details");
       const lbThumbs = document.getElementById("lb-thumbnails");
 
       function openLightbox(id) {
@@ -451,24 +450,24 @@
         lbTitle.innerText = toile.titre;
         lbInfo.innerText = `${toile.taille} — ${toile.dateAjout.split("-")[0]}`;
         lbDesc.innerText = `"${toile.description}"`;
+        lbTech.innerHTML =
+          toile.details || "PIÈCE UNIQUE — PYT ART.<br>SIGNÉE AU DOS.";
 
         updateMainImage(toile.images[0]);
 
-        // Génération des miniatures
         lbThumbs.innerHTML = toile.images
           .map(
             (img, i) => `
-                <button onclick="updateMainImage('${img}', this)" class="lb-thumb w-16 h-16 md:w-20 md:h-20 border border-white/10 overflow-hidden transition-all duration-500 opacity-30 hover:opacity-100 ${
+          <button onclick="updateMainImage('${img}', this)" class="lb-thumb w-16 h-16 md:w-20 md:h-20 border border-white/10 overflow-hidden transition-all duration-500 opacity-30 hover:opacity-100 ${
               i === 0 ? "opacity-100 border-white scale-105" : ""
             }">
-                    <img src="${img}" class="w-full h-full object-cover">
-                </button>
-            `
+            <img src="${img}" class="w-full h-full object-cover">
+          </button>
+        `
           )
           .join("");
 
         lb.classList.remove("hidden");
-        lb.classList.add("flex");
         document.body.style.overflow = "hidden";
       }
 
@@ -479,12 +478,10 @@
         lbImg.classList.add("fade-in");
 
         if (btn) {
-          document
-            .querySelectorAll(".lb-thumb")
-            .forEach((t) => t.classList.replace("opacity-100", "opacity-30"));
-          document
-            .querySelectorAll(".lb-thumb")
-            .forEach((t) => t.classList.remove("border-white", "scale-105"));
+          document.querySelectorAll(".lb-thumb").forEach((t) => {
+            t.classList.replace("opacity-100", "opacity-30");
+            t.classList.remove("border-white", "scale-105");
+          });
           btn.classList.replace("opacity-30", "opacity-100");
           btn.classList.add("border-white", "scale-105");
         }
@@ -492,7 +489,6 @@
 
       function closeLightbox() {
         lb.classList.add("hidden");
-        lb.classList.remove("flex");
         document.body.style.overflow = "auto";
       }
 
@@ -509,18 +505,15 @@
           },
           { threshold: 0.15 }
         );
-
         document
           .querySelectorAll(".reveal")
           .forEach((el) => observer.observe(el));
       }
 
-      // Echap pour fermer
       window.addEventListener("keydown", (e) => {
         if (e.key === "Escape") closeLightbox();
       });
 
-      // Lancement
       window.addEventListener("DOMContentLoaded", renderGallery);
     </script>
   </body>
