--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
           titre: "Netastral",
           taille: "136 x 59 cm",
           details:
-            "PIÈCE UNIQUE — SIGNATURE PYT.<br>ACRYLIQUE SUR TOILE DE LIN.<br>CHÂSSIS HAUTE QUALITÉ.",
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR TOILE COTON.<br> PLUS DISPONIBLE",
           description:
             "Cette toile qui m'a fait douter durant quasiment tout le processus de sa création. Elle m'a frustré, m'a attrapé les entrailles et les a serré pendant de longues heures, elle m'a donné envie de me dire qu'elle serait la dernière. Puis elle m'a laissé faire et j'ai pu libérer la violence de mon amour non sans peser chacun de mes gestes.",
           images: [
@@ -352,17 +352,19 @@
         },
         {
           id: "t2",
-          titre: "Murmure d'Ombre",
-          taille: "90 x 90 cm",
+          titre: "L'abri 40",
+          taille: "80 x 80 cm",
           details:
             "PIÈCE UNIQUE — PYT ART.<br>ACRYLIQUE & BITUME SUR COTON.<br>EXCLUSIVITÉ GALERIE.",
           description:
-            "Le silence capturé dans le mouvement. Contrastes de textures entre le mat de l'acrylique et le brillant de l'huile.",
+            "Immortaliser sa mortalité et se tenir face au témoin d'un souvenir inaltérable",
           images: [
-            "https://images.unsplash.com/photo-1554188248-986adbb73be4?auto=format&fit=crop&q=80&w=1200",
-            "https://images.unsplash.com/photo-1561214115-f2f134cc4912?auto=format&fit=crop&q=80&w=1200",
+            "images/labri40/IMG_0020.JPG",
+            "images/labri40/IMG_0017.JPG",
+            "images/labri40/IMG_0018.JPG",
+            "images/labri40/IMG_0019.JPG",
           ],
-          dateAjout: "2024-04-15",
+          dateAjout: "2022-01-27",
         },
         {
           id: "t3",
