--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PYT ART — L'Atelier Abstrait</title>
+    <title>PYT ART — L'Onirium des Possibles</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
@@ -137,7 +137,7 @@
         <p
           class="font-luxury text-[10px] tracking-[0.9em] uppercase mb-10 opacity-80"
         >
-          Art contemporain
+          Expressionnisme Onirique
         </p>
         <h1
           class="font-serif text-5xl md:text-[8rem] lg:text-[10rem] leading-[0.85] tracking-tighter mb-10"
@@ -160,12 +160,12 @@
           <h2
             class="font-luxury text-[11px] tracking-[0.6em] uppercase text-gray-400 mb-6"
           >
-            Collections 2024
+            Laissez le regard créer l'oeuvre
           </h2>
           <h3
             class="font-serif text-4xl md:text-6xl text-gray-900 tracking-tight"
           >
-            Vibrations Chromatiques
+            Immersion libre
           </h3>
         </header>
 
@@ -274,12 +274,14 @@
         class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-start gap-24"
       >
         <div class="reveal">
-          <h4 class="font-luxury text-sm tracking-[0.4em] mb-8">PYT ART</h4>
+          <h4 class="font-luxury text-sm tracking-[0.4em] mb-8">
+            PYT — L'ONIRIUM DES POSSIBLES
+          </h4>
           <p
             class="text-[10px] text-gray-400 uppercase tracking-[0.3em] max-w-xs leading-loose"
           >
-            Atelier d'art abstrait. Explorer l'invisible à travers la matière et
-            le mouvement.
+            Fragments d'imaginaire. Peintures d'immersion.<br />Et vous, quels
+            possibles y lisez-vous ?
           </p>
         </div>
 
@@ -328,7 +330,7 @@
         <p
           class="text-[9px] uppercase tracking-[0.8em] text-gray-300 font-light"
         >
-          © 2024 — PYT ART — France
+          © 2025 — PYT ART — France
         </p>
       </div>
     </footer>
