--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
       <div class="relative z-10 text-center text-white px-6">
         <p
-          class="font-luxury text-[10px] tracking-[0.9em] uppercase mb-10 opacity-80"
+          class="font-luxury text-[10px] tracking-[0.9em] mr-[-0.9em] uppercase mb-10 opacity-80"
         >
           Expressionnisme Onirique
         </p>
@@ -143,7 +143,7 @@
           class="font-serif text-5xl md:text-[8rem] lg:text-[10rem] leading-[0.85] tracking-tighter mb-10"
         >
           PYT <br />
-          <span class="italic ml-8 md:ml-32">Art</span>
+          <span class="italic ml-8 md:ml-32">L'Onirium</span>
         </h1>
         <div class="flex justify-center mt-16">
           <div
