--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     >
       <div class="absolute inset-0 z-0">
         <img
-          src="https://images.unsplash.com/photo-1541701494587-cb58502866ab?auto=format&fit=crop&q=80&w=2400"
+          src="images/hero_pyt.png"
           alt="PYT ART Background"
           class="w-full h-full object-cover hero-bg brightness-[0.7]"
         />
@@ -143,7 +143,7 @@
           class="font-serif text-5xl md:text-[8rem] lg:text-[10rem] leading-[0.85] tracking-tighter mb-10"
         >
           PYT <br />
-          <span class="italic ml-8 md:ml-32">L'Onirium</span>
+          <span class="italic ml-8 md:ml-32">Art</span>
         </h1>
         <div class="flex justify-center mt-16">
           <div
