--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
           <h2
             class="font-luxury text-[11px] tracking-[0.6em] uppercase text-gray-400 mb-6"
           >
-            Laissez le regard créer l'oeuvre
+            Immersion libre
           </h2>
           <h3
-            class="font-serif text-4xl md:text-6xl text-gray-900 tracking-tight"
+            class="font-serif text-3xl md:text-5xl text-gray-900 tracking-tight leading-tight max-w-4xl mx-auto"
           >
-            Immersion libre
+            Laissez le regard créer l'oeuvre
           </h3>
         </header>
 
