--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
           <h2
             class="font-luxury text-[11px] tracking-[0.6em] uppercase text-gray-400 mb-6"
           >
-            Immersion libre
+            Laissez le regard créer l'oeuvre
           </h2>
           <h3
-            class="font-serif text-3xl md:text-5xl text-gray-900 tracking-tight leading-tight max-w-4xl mx-auto"
+            class="font-serif text-4xl md:text-6xl text-gray-900 tracking-tight"
           >
-            Laissez le regard créer l'oeuvre
+            Immersion libre
           </h3>
         </header>
 
@@ -296,9 +296,9 @@
               >Instagram</a
             >
             <a
-              href="#"
+              href="apropos.html"
               class="text-[10px] uppercase tracking-[0.3em] text-gray-400 hover:text-black transition-colors"
-              >Journal</a
+              >À propos</a
             >
           </div>
           <div class="flex flex-col gap-6">
@@ -320,17 +320,20 @@
         class="hidden max-w-7xl mx-auto mt-24 p-12 bg-gray-50 text-[10px] text-gray-400 uppercase tracking-widest leading-loose border border-gray-100 reveal active"
       >
         <p class="mb-6">
-          Propriété intellectuelle : Toutes les œuvres sont la propriété
-          exclusive de PYT ART. Toute reproduction est strictement interdite.
+          Éditeur du site : Pierre-Yves TIBERGHIEN (Artiste sous le nom de PYT)</p>
+          <p>Contact : py.tiberghien@gmail.com</p>
+          <p>Propriété intellectuelle : L'ensemble des contenus (textes, photographies, œuvres d'art) présents sur ce site sont la propriété exclusive de l'artiste PYT. Toute reproduction, représentation ou diffusion, totale ou partielle, est strictement interdite sans autorisation préalable.</p>
+          <p>Hébergement : Ce site est hébergé par GitHub Inc. Adresse : 88 Colin P. Kelly Jr St, San Francisco, CA 94107, États-Unis.
+          Site web : https://pages.github.com</p>
+          <p>Données personnelles : Ce site ne collecte aucune donnée personnelle et n'utilise aucun cookie de traçage publicitaire.</p>
         </p>
-        <p>Hébergement : Atelier Privé — PYT ART.</p>
       </div>
 
       <div class="mt-40 text-center">
         <p
           class="text-[9px] uppercase tracking-[0.8em] text-gray-300 font-light"
         >
-          © 2025 — PYT ART — France
+          © 2026 — PYT ART — France
         </p>
       </div>
     </footer>
