--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
       >
         <p class="mb-6">
           Éditeur du site : Pierre-Yves TIBERGHIEN (Artiste sous le nom de PYT)</p>
-          <p>Contact : py.tiberghien@gmail.com</p>
-          <p>Propriété intellectuelle : L'ensemble des contenus (textes, photographies, œuvres d'art) présents sur ce site sont la propriété exclusive de l'artiste PYT. Toute reproduction, représentation ou diffusion, totale ou partielle, est strictement interdite sans autorisation préalable.</p>
-          <p>Hébergement : Ce site est hébergé par GitHub Inc. Adresse : 88 Colin P. Kelly Jr St, San Francisco, CA 94107, États-Unis.
+          <p class="mb-6">Contact : py.tiberghien@gmail.com</p>
+          <p class="mb-6">Propriété intellectuelle : L'ensemble des contenus (textes, photographies, œuvres d'art) présents sur ce site sont la propriété exclusive de l'artiste PYT. Toute reproduction, représentation ou diffusion, totale ou partielle, est strictement interdite sans autorisation préalable.</p>
+          <p class="mb-6">Hébergement : Ce site est hébergé par GitHub Inc. Adresse : 88 Colin P. Kelly Jr St, San Francisco, CA 94107, États-Unis.
           Site web : https://pages.github.com</p>
-          <p>Données personnelles : Ce site ne collecte aucune donnée personnelle et n'utilise aucun cookie de traçage publicitaire.</p>
+          <p class="mb-6">Données personnelles : Ce site ne collecte aucune donnée personnelle et n'utilise aucun cookie de traçage publicitaire.</p>
         </p>
       </div>
 
