--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           titre: "L'abri 40",
           taille: "80 x 80 cm",
           details:
-            "PIÈCE UNIQUE — PYT ART.<br>ACRYLIQUE & BITUME SUR COTON.<br>EXCLUSIVITÉ GALERIE.",
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>NON DISPONIBLE.",
           description:
             "Immortaliser sa mortalité et se tenir face au témoin d'un souvenir inaltérable",
           images: [
@@ -370,6 +370,73 @@
             "images/labri40/IMG_0019.JPG",
           ],
           dateAjout: "2022-01-27",
+        },
+         {
+          id: "t3",
+          titre: "Sanmouraï",
+          taille: "46 x 38 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+          description:
+            "",
+          images: [
+            "images/Sanmourai/2020_Sanmourai_2.jpg",
+            "images/Sanmourai/2020_Sanmourai_uni.jpg",
+          ],
+          dateAjout: "2020-12-18",
+        },
+        {
+          id: "t4",
+          titre: "Untitled#10",
+          taille: "46 x 38 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+          description:
+            "",
+          images: [
+            "images/Untitled10/2020_Untitled_10_uni.jpg",
+            "images/Untitled10/2020_Untitled_10.jpg",
+          ],
+          dateAjout: "2020-12-03",
+        },
+         {
+          id: "t5",
+          titre: "Untitled#15",
+          taille: "55 x 46 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          description:
+            "",
+          images: [
+            "images/Untitled15/2020_Untitled_uni.jpg",
+          ],
+          dateAjout: "2020-12-26",
+        },
+        {
+          id: "t6",
+          titre: "Untitled#16",
+          taille: "30 x 30 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          description:
+            "",
+          images: [
+            "images/Untitled16/2020_Untitled_16_uni.jpg",
+          ],
+          dateAjout: "2020-12-27",
+        },
+        {
+          id: "t7",
+          titre: "L'incrusteur",
+          taille: "55 x 46 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+          description:
+            "",
+          images: [
+            "images/incrusteur/2021_incrusteur_uni.jpg",
+          ],
+          dateAjout: "2021-01-06",
         },
       ];
       // === FIN DES DONNEES ===
