--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
           description:
             "",
           images: [
-            "images/Sanmourai/2020_Sanmourai_2.jpg",
             "images/Sanmourai/2020_Sanmourai_uni.jpg",
+            "images/Sanmourai/2020_Sanmourai_2.jpg",
           ],
           dateAjout: "2020-12-18",
         },
@@ -441,6 +441,35 @@
             "images/incrusteur/2021_incrusteur_uni.jpg",
           ],
           dateAjout: "2021-01-06",
+        },
+          {
+          id: "t8",
+          titre: "Chaordon",
+          taille: "80 x 80 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          description:
+            "Pourquoi partir avec toi me donne l'impression de ne rien laisser derrière moi ?",
+          images: [
+            "images/Chaordon/Chardon_01_uni.jpg",
+            "images/Chaordon/Charodon_02.JPG",
+          ],
+          dateAjout: "2021-02-19",
+        },
+          {
+          id: "t9",
+          titre: "Victal",
+          taille: "80 x 80 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          description:
+            "Je t'appelle de mes yeux, est-ce que tu me vois grandir ?",
+          images: [
+            "images/Victal/Victal_01_uni.jpg",
+            "images/Victal/Victal_02.JPG",
+            "images/Victal/Victal_03.JPG",
+          ],
+          dateAjout: "2021-02-19",
         },
       ];
       // === FIN DES DONNEES ===
