--- a/index.html
+++ b/index.html
@@ -471,6 +471,67 @@
           ],
           dateAjout: "2021-02-19",
         },
+        {
+          id: "t10",
+          titre: "Galeïde",
+          taille: "80 x 80 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+          description:
+            "",
+          images: [
+            "images/Galeïde/Galeïde_01_uni.jpg",
+            "images/Galeïde/Galeïde_02.JPG",
+            "images/Galeïde/Galeïde_03.JPG",
+            "images/Galeïde/Galeïde_04.JPG"
+          ],
+          dateAjout: "2021-04-28",
+        },
+        {
+          id: "t11",
+          titre: "Bordest",
+          taille: "120 x 50 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+          description:
+            "",
+          images: [
+            "images/Bordest/Bordest_uni.jpg",
+            "images/Bordest/Bordest_01.png",
+            "images/Bordest/Bordest_02.png",
+            "images/Bordest/Bordest_03.png"
+          ],
+          dateAjout: "2021-05-21",
+        },
+          {
+          id: "t12",
+          titre: "ADL",
+          taille: "55 x 46 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+          description:
+            "",
+          images: [
+            "images/ADL/ADL_uni.jpg",
+          ],
+          dateAjout: "2021-05-21",
+        },
+        {
+          id: "t13",
+          titre: "Photone",
+          taille: "150 x 50 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+          description:
+            "\"Tenez la ligne !\" /n - Les notes.", 
+          images: [
+            "images/Photone/Photone_uni.jpg",
+            "images/Photone/Photone_dt.png",
+            "images/Photone/Photone_02.jpg",
+            "images/Photone/Photone_03.jpg",
+          ],
+          dateAjout: "2021-05-21",
+        },
       ];
       // === FIN DES DONNEES ===
 
