ajout toiles altrail

--- a/index.html
+++ b/index.html
@@ -530,7 +530,24 @@
             "images/Photone/Photone_02.jpg",
             "images/Photone/Photone_03.jpg",
           ],
-          dateAjout: "2021-05-21",
+          dateAjout: "2021-07-11",
+        },
+           {
+          id: "t14",
+          titre: "Altrail",
+          taille: "150 x 50 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+          description:
+            "", 
+          images: [
+            "images/Altrail/IMG_1141dt.jpg",
+            "images/Altrail/Altraildt.png",
+            "images/Altrail/Altrail_04.JPG",
+            "images/Altrail/Altrail_05.JPG",
+            "images/Altrail/Altrail_06.JPG",
+          ],
+          dateAjout: "2021-08-02",
         },
       ];
       // === FIN DES DONNEES ===
