--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
           titre: "L'abri 40",
           taille: "80 x 80 cm",
           details:
-            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>NON DISPONIBLE.",
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>COLLECTION PRIVÉE.",
           description:
             "Immortaliser sa mortalité et se tenir face au témoin d'un souvenir inaltérable",
           images: [
@@ -556,7 +556,7 @@
           titre: "Altrail",
           taille: "150 x 50 cm",
           details:
-            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
           description:
             "", 
           images: [
@@ -574,7 +574,7 @@
           titre: "Coulamenta",
           taille: "136 x 51 cm",
           details:
-            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
           description:
             "Être complémentaires est une évidence pour ceux qui la vivent et qui échappe parfois à ceux qui la regardent", 
           images: [
@@ -584,13 +584,13 @@
           ],
           dateAjout: "2021-02-04",
         },
-           {
+        {
           id: "t16",
           ref: "PYT-2021-012",
           titre: "Coulubric",
           taille: "100 x 81 cm",
           details:
-            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>PLUS DISPONIBLE.",
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>COLLECTION PRIVÉE.",
           description:
             "", 
           images: [
@@ -601,6 +601,43 @@
             "images/Coulubric/Coulubric_06.JPG",
           ],
           dateAjout: "2021-09-12",
+        },
+        {
+          id: "t17",
+          ref: "PYT-2021-013",
+          titre: "L04ding",
+          taille: "81 x 60 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          description:
+            "Regarde et laisse toi porter. Si tu te perds, prend du recul. Un symbole unique peut cacher une infinité d'images.", 
+          images: [
+            "images/L04ding/L04ding_dt.jpg",
+            "images/L04ding/L04ding_03.jpg",
+            "images/L04ding/L04ding_04.jpg",
+            "images/L04ding/IMG_1321.JPG",
+          ],
+          dateAjout: "2021-10-05",
+        },
+        {
+          id: "t18",
+          ref: "PYT-2021-014",
+          titre: "Spridalus",
+          taille: "90 x 30 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          description:
+            "Arrêter de m'éparpiller !<br>Rassembler mes idées !<br> Mais mes idées prennent de la place, me repoussent, me divisent.<br>C'est plutôt moi que je devrais rassembler !", 
+          images: [
+            "images/Spridalus/Spridalus_uni.jpg",
+            "images/Spridalus/Spridalus_det.png",
+            "images/Spridalus/Spridalus_03.JPG",
+            "images/Spridalus/Spridalus_04.JPG",
+            "images/Spridalus/Spridalusa.png",
+            "images/Spridalus/Spridalusb.png",
+            "images/Spridalus/Spridalusc.png",
+          ],
+          dateAjout: "2021-10-18",
         },
       ];
       // === FIN DES DONNEES ===
