--- a/index.html
+++ b/index.html
@@ -639,6 +639,23 @@
           ],
           dateAjout: "2021-10-18",
         },
+        {
+          id: "t19",
+          ref: "PYT-2021-015",
+          titre: "Rortach",
+          taille: "100 x 81 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          description:
+            "Dis moi ce que tu vois et je te dirai à quel point tu es fou.", 
+          images: [
+            "images/Rortach/Rortach_uni.jpg",
+            "images/Rortach/Rortach_dt.png",
+            "images/Rortach/Rortach_03.JPG",
+            "images/Rortach/Rortach_04.JPG",
+          ],
+          dateAjout: "2021-11-18",
+        },
       ];
       // === FIN DES DONNEES ===
 
