--- a/index.html
+++ b/index.html
@@ -656,6 +656,25 @@
           ],
           dateAjout: "2021-11-18",
         },
+        {
+          id: "t20",
+          ref: "PYT-2021-016",
+          titre: "Mantigra",
+          taille: "112 x 55 cm",
+          details:
+            "PIÈCE UNIQUE.<br>ACRYLIQUE SUR COTON.<br>DISPONIBLE.",
+          description:
+            "Commencement, naissance, création.<br>Continuation, vie.<br>Fin, mort, destruction.<br>Et on recommence.", 
+          images: [
+            "images/Mantigra/mantigra_uni.jpg",
+            "images/Mantigra/IMG_1848.JPG",
+            "images/Mantigra/IMG_1849.JPG",
+            "images/Mantigra/mantigra_01.jpg",
+            "images/Mantigra/mantigra_02.jpg",
+            "images/Mantigra/mantigra_03.jpg",
+          ],
+          dateAjout: "2021-12-17",
+        },
       ];
       // === FIN DES DONNEES ===
 
