--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
         class="hidden max-w-7xl mx-auto mt-24 p-12 bg-gray-50 text-[10px] text-gray-400 uppercase tracking-widest leading-loose border border-gray-100 reveal active"
       >
         <p class="mb-6">
-          Éditeur du site : Pierre-Yves TIBERGHIEN (Artiste sous le nom de PYT)</p>
-          <p class="mb-6">Contact : py.tiberghien@gmail.com</p>
+          Éditeur du site : Pierre-Yves T. (Artiste sous le nom de PYT)</p>
+          <p class="mb-6">Contact : </p>
           <p class="mb-6">Propriété intellectuelle : L'ensemble des contenus (textes, photographies, œuvres d'art) présents sur ce site sont la propriété exclusive de l'artiste PYT. Toute reproduction, représentation ou diffusion, totale ou partielle, est strictement interdite sans autorisation préalable.</p>
           <p class="mb-6">Hébergement : Ce site est hébergé par GitHub Inc. Adresse : 88 Colin P. Kelly Jr St, San Francisco, CA 94107, États-Unis.
           Site web : https://pages.github.com</p>
