--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PYT ART — L'Onirium des Possibles</title>
+
+    <meta name="description" content="Découvrez l'Onirium des Possibles de PYT. Une exploration de l'Expressionnisme Onirique où le geste rencontre le songe. Laissez votre regard créer l'œuvre.">
+    <meta name="keywords" content="PYT ART, Expressionnisme Onirique, Onirium, Artiste Peintre, Abstrait, Art Contemporain, Peinture Acrylique">
+    <meta name="author" content="PYT">
+
+    <meta property="og:title" content="PYT ART — L'Onirium des Possibles">
+    <meta property="og:description" content="Bienvenue dans l'univers de l'Expressionnisme Onirique. Explorez une galerie où chaque toile est une immersion libre.">
+    <meta property="og:image" content="https://pyt-art.com/images/Gale%C3%AFde/Gale%C3%AFde_02.avif">
+    <meta property="og:url" content="https://www.pyt-art.com">
+    <meta property="og:type" content="website">
+    
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
